...
    }

    private func proceedToNextQuestionOrResults() {
        if isLastQuestion() {
            let resultMessage = makeResultsMessage()
            let resultViewModel = QuizResultViewModel(
                title: "Этот раунд окончен!",
                text: resultMessage,
                buttonText: "Сыграть ещё раз"
            )
            viewController?.show(quiz: resultViewModel)
        } else {
            switchToNextQuestion()
            questionFactory?.requestNextQuestion()
        }
...
